--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -37,7 +37,8 @@
 				<span class="mui-icon iconfont icon-jiaxiaohudong"></span>
 				<span class="mui-tab-label">家校互动</span>
 			</a>
-			<a class="mui-tab-item" href="html/ScienceEducation/sciedu_home.html">
+			<!--<a class="mui-tab-item" href="html/ScienceEducation/sciedu_home.html">-->
+			<a class="mui-tab-item" href="html/homeSchool/homeSchoolIndex.html">
 				<span class="mui-icon iconfont icon-jiaoyu"></span>
 				<span class="mui-tab-label">科教活动</span>
 			</a>
@@ -54,7 +55,8 @@
 		<script type="text/javascript" charset="utf-8">
 			//mui初始化
 			mui.init();
-			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/ScienceEducation/sciedu_home.html', 'html/Course/courseIndex.html', 'html/homeSchool/homeSchoolIndex.html'];
+//			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/ScienceEducation/sciedu_home.html', 'html/Course/courseIndex.html', 'html/homeSchool/homeSchoolIndex.html'];
+			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/homeSchool/homeSchoolIndex.html', 'html/Course/courseIndex.html', 'html/homeSchool/homeSchoolIndex.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
