--- a/HomeSchoolInteraction/html/homeSchool/notice/addNotice.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice/addNotice.html
@@ -88,6 +88,28 @@
 					}
 				}
 			});
+			
+//			var btnArray = [{title:"拍照或录像"},{title:"选取现有的"}];
+//			plus.nativeUI.actionSheet( {
+//				title:"选择照片",
+//				cancel:"取消",
+//				buttons:btnArray
+//			}, function(e){
+//				var index = e.index;
+//				var text = "你刚点击了\"";
+//				switch (index){
+//					case 0:
+//						text += "取消";
+//						break;
+//					case 1:
+//						text += "拍照或录像";
+//						break;
+//					case 2:
+//						text += "选取现有的";
+//						break;
+//				}
+//				info.innerHTML = text+"\"按钮";
+//			} );
 		</script>
 	</body>
 
