--- a/HomeSchoolInteraction/html/homeSchool/notice/addNotice.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice/addNotice.html
@@ -6,41 +6,68 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../../../fonts/iconfont.css" />
+		
+		<link href="../../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../../css/utils/preview.css" rel="stylesheet" />
+		<!--<link href="../../../css/quan/custom-textarea.css" rel="stylesheet" />-->
+		<link href="../../../css/utils/publish-answer.css" rel="stylesheet" />
+		<style type="text/css">
+			.spanCss {
+				margin-left: 15px;
+				width: 25px;
+				height: 25px;
+			}
+		</style>
 	</head>
 
-	<body>
+	<body style="background: white;">
 		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="tempVue">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">新建通知</h1>
 			<a @click="addNotice()" class="mui-pull-right" style="color: white;font-size: 15px;margin-top: 10px;">发布</a>
 		</header>
-		<div class="mui-content" id="addNoticeContent">
+		<div class="mui-content" id="addNoticeContent" style="background: white;">
 			<!--<textarea v-model="content" class="weui-textarea" style="padding: 0;margin-bottom: 0;" placeholder="请输入内容" rows="4"></textarea>-->
 			<textarea name="" rows="4" cols="" style="padding: 5;margin-bottom: 0;border: 0px;" placeholder="请输入内容(最多2000字)"></textarea>
-			<ul class="mui-table-view">
-			        <li class="mui-table-view-cell">
-			            <a>
-			                接收人
-			            </a>
-			        </li>
-			        <li class="mui-table-view-cell">
-			            <a class="mui-navigate-right">
-			                 年级:
-			            </a>
-			        </li>
-			        <li class="mui-table-view-cell">
-			            <a class="mui-navigate-right">
-			                 班级:
-			            </a>
-			        </li>
-			        <li class="mui-table-view-cell">
-			            <a class="mui-navigate-right">
-			                 家长:
-			            </a>
-			        </li>
-			    </ul>
+			<div class="">
+				<span @click="clickAddFile(0)" class="mui-icon iconfont icon-xiangji spanCss"></span>
+				<span @click="clickAddFile(1)" class="mui-icon iconfont icon-tupian00 spanCss"></span>
+				<span @click="clickAddFile(2)" class="mui-icon iconfont icon-yuyin spanCss"></span>
+				<span @click="clickAddFile(3)" class="mui-icon iconfont icon-video spanCss"></span>
+				<div class="mui-input-row mui-checkbox mui-left" style="float: right;margin-top: 0px;height: 30px;">
+					<label>短信同步</label>
+					<input v-model="msgFlag" name="checkbox1" type="checkbox">
+				</div>
+			</div>
+			<hr style="margin-top: 5px; height:1px;border:none;border-top:1px solid #e4e4e4;" />
+			<div id="pictures" style="width: 100%;"></div>
+			<div class="" style="margin-top: 10px;">
+				<ul class="mui-table-view">
+					<li class="mui-table-view-cell">
+						<a>
+							接收人
+						</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							年级:
+						</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							班级:
+						</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a class="mui-navigate-right">
+							家长:
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-		
+
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/utils/vue.min.js"></script>
 		<script src="../../../js/utils/utils.js"></script>
@@ -55,61 +82,311 @@
 		<script src='../../../js/utils/sortSign.js'></script>
 		<script src="../../../js/storageKeyName.js"></script>
 		<script src="../../../js/utils/store.js"></script>
+		
+	<script src="../../../js/mui.zoom.js"></script>
+	<script src="../../../js/mui.previewimage.js"></script>
+	<script src="../../../js/utils/camera.js"></script>
+	<script src="../../../js/utils/files.js"></script>
+	<script src="../../../js/utils/ASFiles.js"></script>
+	<script src="../../../js/utils/recordvideoutil.js"></script>
+	<script src="../../../js/utils/load.js"></script>
+	<script src="../../../js/utils/video.js"></script>
+	<script src="../../../js/utils/gallerypick.js"></script>
+	<script src="../../../js/utils/CloudFileUtil.js"></script>
+	<script src="../../../js/utils/compress.js"></script>
+	<script src="../../../js/utils/cryption.js"></script>
+	<script src="../../../js/qiniu/qiniu.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			//获取个人信息
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			console.log('personal:' + JSON.stringify(personal));
-			
+
 			var addNoticeContent = new Vue({
 				el: "#addNoticeContent",
 				data: {
 					flag: 0, //0刷新，1加载更多
 					noticeArray: [], //通知列表数组
-					content:'',//内容
-					msgFlag:0,//是否发生短信
-					gradeArray:[],//年级列表
-					classArray:[],//班级列表
-					parentArray:[]//家长列表
+					content: '', //内容
+					msgFlag: 1, //是否发生短信
+					gradeArray: [], //年级列表
+					classArray: [], //班级列表
+					parentArray: [] //家长列表
 				},
 				methods: {
-					
-				}
-			});
-			
-			var tempVue = new Vue({
-				el: "#tempVue",
-				data: {
-					
-				},
-				methods: {
-					addNotice:function(){
-						console.log('add通知');
+					clickAddFile: function(flag) {
+						console.log('flag:' + flag);
+						if(flag == 0) { //拍照
+							if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
+								mui.toast("只允许上传一种附件！");
+								return;
+							}
+							if(CloudFileUtil.files.length < 9) {
+								camera.getPic(camera.getCamera(), function(picPath) {
+									plus.nativeUI.showWaiting(storageKeyName.WAITING);
+									var saveSpace = storageKeyName.PERSONALSPACE; //保存空间
+									var data = CloudFileUtil.getSingleUploadDataOptions(picPath, 6, 200, 0, saveSpace);
+									CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+										//console.log("获取的数据：" + JSON.stringify(datas));
+										if(datas.Status == 1) {
+											var tokenInfo = datas.Data;
+											//压缩照片
+											compress.compressPIC(picPath, function(event) {
+												//上传文件
+												CloudFileUtil.uploadFile(tokenInfo, event.target, function(uploadData, status) {
+													//console.log(JSON.stringify(uploadData));
+													var img = { //图片信息
+														url: tokenInfo.Domain + tokenInfo.Key,
+														thumb: tokenInfo.OtherKey[data.thumbKey],
+														type: 1
+													}
+													//关闭等待框
+													plus.nativeUI.closeWaiting();
+													//放置图片
+													CloudFileUtil.setPic(img);
+												});
+											})
+
+										}
+									}, function(xhr, type, errorThrown) {
+										//console.log("错误类型：" + type + errorThrown);
+										plus.nativeUI.closeWaiting(); //关闭等待框
+									});
+								})
+							} else {
+								mui.toast('上传图片附件不得多于9张！');
+							}
+
+						} else if(flag == 1) { //从相册取图
+
+							if(CloudFileUtil.files.length > 0 && CloudFileUtil.files[0].type != 1) {
+								mui.toast("只允许上传一种附件！");
+								return;
+							}
+							if(CloudFileUtil.files.length < 9) {
+								var picCount = 0; //上传图片计数
+								gallery.getMultiplePic(9 - CloudFileUtil.files.length, function(paths) { //回调函数
+									plus.nativeUI.showWaiting(storageKeyName.UPLOADING); //等待框
+									//console.log("保存的路径：" + JSON.stringify(paths));
+									var saveSpace = storageKeyName.PERSONALSPACE; //保存路径
+									compress.compressPics(paths, function(compressedPaths) {
+										//console.log('获取的图片路径：' + JSON.stringify(compressedPaths));
+										var data = CloudFileUtil.getMultipleUploadDataOptions(compressedPaths, 6, 200, 0, saveSpace); //获取获取token的各参数
+										CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+												//console.log("传回来的值：" + JSON.stringify(datas)) //回调数据
+												if(datas.Status == 1) { //成功
+													var tokenInfos = datas.Data; //参数信息
+													var imgs = [];
+													//上传图片
+													CloudFileUtil.uploadFiles(compressedPaths, tokenInfos, function(uploadData, status, index) {
+														//console.log(JSON.stringify(uploadData));
+														imgs[index] = {
+															url: tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key,
+															thumb: (tokenInfos[0].Domain + JSON.parse(uploadData.responseText).key).replace(saveSpace, saveSpace + "thumb/"),
+															type: 1
+														}
+														picCount++;
+
+														if(picCount == compressedPaths.length) { //所有图片已上传
+															plus.nativeUI.closeWaiting(); //关闭等待框
+															for(var i in imgs) {
+																CloudFileUtil.setPic(imgs[i]); //放置图片
+															}
+
+														}
+													});
+
+												}
+											},
+											//错误的回调
+											function(xhr, type, errorThrown) {
+												//console.log("错误类型：" + type + errorThrown);
+												plus.nativeUI.closeWaiting();
+											});
+									});
+
+								});
+							} else {
+								mui.toast('上传图片附件不得多于9张！');
+							}
+
+						} else if(flag == 2) { //语音
+							mui.toast('功能暂未开放！');
+						} else if(flag == 3) { //视频
+
+							document.activeElement.blur();
+							var item = this;
+							//				jQuery(item).css('pointerEvents', 'none');
+							//console.log("item不能点击了！" + item.id);
+							if(CloudFileUtil.files.length > 0) {
+								switch(CloudFileUtil.files[0].type) {
+									case 1:
+										mui.toast("只能上传一种附件！");
+										break;
+									case 2:
+										mui.toast("只能上传一个视频！");
+										break;
+									default:
+										break;
+								}
+								//					jQuery(item).css('pointerEvents', 'all');
+								return;
+							}
+							var btnArr = [{
+								title: "录制视频",
+								dia: 0
+							}, {
+								title: "本地视频",
+								dia: 0
+							}];
+							var funArr = [recordVideo, pickLocalVideo];
+							events.showActionSheet(btnArr, funArr);
+
+						}
 					}
 				}
 			});
-			
-//			var btnArray = [{title:"拍照或录像"},{title:"选取现有的"}];
-//			plus.nativeUI.actionSheet( {
-//				title:"选择照片",
-//				cancel:"取消",
-//				buttons:btnArray
-//			}, function(e){
-//				var index = e.index;
-//				var text = "你刚点击了\"";
-//				switch (index){
-//					case 0:
-//						text += "取消";
-//						break;
-//					case 1:
-//						text += "拍照或录像";
-//						break;
-//					case 2:
-//						text += "选取现有的";
-//						break;
-//				}
-//				info.innerHTML = text+"\"按钮";
-//			} );
+
+			/**
+			 * 选择本地视频
+			 */
+			function pickLocalVideo() {
+				Gallery.pickVideo(function(e) {
+					if(e.flag === 1) {
+						uploadFile(e.path);
+					}
+				})
+			}
+			/**
+			 * 录像
+			 */
+			function recordVideo() {
+				video.recordVideo({}, function(path) {
+					events.showWaiting();
+					//console.log("保存在本地的路径：" + path);
+					uploadFile(path);
+				}, function(errData) {
+					//console.log(errData.code);
+					if(errData.code != 0) {
+						mui.toast(errData.message);
+					}
+					jQuery("#take_camero").css('pointerEvents', 'all');
+					//console.log("item能点击了！")
+				})
+			}
+
+			/**
+			 * 上传文件
+			 * @param {Object} path
+			 */
+			function uploadFile(path) {
+				load.getManageOptions(2, path, function(mData, thumb) {
+					//console.log("视频获取的各项参数：" + JSON.stringify(data));
+					mData.saveSpace = storageKeyName.PERSONALSPACE;
+					mData.spaceId = 6;
+					var data = CloudFileUtil.getSingleImgUploadOptions(path, mData.spaceId, mData.spaceType, mData.saveSpace, mData.options);
+					CloudFileUtil.getQNUpTokenWithManage(storageKeyName.QNGETUPLOADTOKEN, data.options, function(datas) {
+						//console.log("获取的数据：" + JSON.stringify(datas));
+						if(datas.Status == 1) {
+							var tokenInfo = datas.Data;
+							//上传文件
+							CloudFileUtil.uploadFile(tokenInfo, path, function(uploadData, status) {
+								//console.log("获取的上传数据：" + JSON.stringify(uploadData));
+								//console.log("获取的token信息：" + JSON.stringify(tokenInfo));
+								var img = { //图片信息
+									url: tokenInfo.Domain + tokenInfo.Key,
+									thumb: tokenInfo.OtherKey[data.thumbKey],
+									clip: tokenInfo.OtherKey[data.thumbKey] + "?imageMogr2/gravity/Center/crop/!" + mData.options.thumbSize.width + "x" + mData.options.thumbSize.width * 0.45,
+									localPath: path,
+									type: 2
+								}
+								img.duration = events.getVideoDuration(img.url);
+								//		//console.log("获取的图片信息：" + JSON.stringify(img));
+								//关闭等待框
+								plus.nativeUI.closeWaiting();
+								//放置图片
+								CloudFileUtil.setPic(img, 0, thumb);
+								jQuery("#take_camero").css('pointerEvents', 'all');
+							});
+						}
+
+					}, function(xhr, type, errorThrown) {
+						//console.log("错误类型：" + type + errorThrown);
+						plus.nativeUI.closeWaiting(); //关闭等待框
+						jQuery("#take_camero").css('pointerEvents', 'all');
+					});
+				})
+			}
+
+			var tempVue = new Vue({
+				el: "#tempVue",
+				data: {
+
+				},
+				methods: {
+					addNotice: function() {
+						console.log('add通知');
+
+						if(addNoticeContent.content.trim().length == 0) {
+							mui.toast("请输入回复内容", "cancel");
+							return;
+						}
+						if(addNoticeContent.content.length >= 2000) {
+							mui.toast("回复内容不能超过2000字", "cancel");
+							return;
+						}
+						//1.新增学校通知（同时增加通知未读）
+						var tempData1 = {
+							schoolId: personal.schid, //学校ID，统一部署的时候，学校ID传000000
+							noticeContent: addNoticeContent.content, //内容
+							noticEncName: personal.uid, //附件名称，竖杠隔开
+							noticeEncAddr: personal.utname, //附件地址，竖杠隔开
+							smsSync: 0, //是否短信同步，先填0
+							sendManId: personal.utid, //发布人ID
+							sendManCode: personal.uid, //发布人账号
+							sendManName: personal.utname, //发布人姓名
+							sendManImg: personal.imgurl, //发布人头像
+							receiveManIds: personal.utid, //接收人人ID，例如：[“1”,”2”,”3”]
+							receiveManCodes: personal.uid, //接收人账号，例如：[“1”,”2”,”3”]
+							receiveManNames: personal.utname, //接收人姓名，例如：[“1”,”2”,”3”]
+							receiveManImgs: addNoticeContent.content //接收人头像
+						}
+						events.showWaiting();
+						//1.新增学校通知（同时增加通知未读）
+						addNoticePro(tempData1, function function_name(data) {
+							events.closeWaiting();
+							if(data.RspCode == 0) {
+								addNoticeContent.content = '';
+								mui.toast('成功');
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+					}
+				}
+			});
+
+			//			var btnArray = [{title:"拍照或录像"},{title:"选取现有的"}];
+			//			plus.nativeUI.actionSheet( {
+			//				title:"选择照片",
+			//				cancel:"取消",
+			//				buttons:btnArray
+			//			}, function(e){
+			//				var index = e.index;
+			//				var text = "你刚点击了\"";
+			//				switch (index){
+			//					case 0:
+			//						text += "取消";
+			//						break;
+			//					case 1:
+			//						text += "拍照或录像";
+			//						break;
+			//					case 2:
+			//						text += "选取现有的";
+			//						break;
+			//				}
+			//				info.innerHTML = text+"\"按钮";
+			//			} );
 		</script>
 	</body>
 
