添加通知页修改

--- a/HomeSchoolInteraction/html/homeSchool/addNotice.html
+++ b/HomeSchoolInteraction/html/homeSchool/addNotice.html
@@ -5,13 +5,13 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../../css/mui.min.css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="../../../fonts/iconfont.css" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../../fonts/iconfont.css" />
 		
-		<link href="../../../css/utils/common.css" rel="stylesheet" />
-		<link href="../../../css/utils/preview.css" rel="stylesheet" />
-		<!--<link href="../../../css/quan/custom-textarea.css" rel="stylesheet" />-->
-		<link href="../../../css/utils/publish-answer.css" rel="stylesheet" />
+		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/utils/preview.css" rel="stylesheet" />
+		<!--<link href="../../css/quan/custom-textarea.css" rel="stylesheet" />-->
+		<link href="../../css/utils/publish-answer.css" rel="stylesheet" />
 		<style type="text/css">
 			.spanCss {
 				margin-left: 15px;
@@ -68,34 +68,34 @@
 			</div>
 		</div>
 
-		<script src="../../../js/mui.min.js"></script>
-		<script src="../../../js/utils/vue.min.js"></script>
-		<script src="../../../js/utils/utils.js"></script>
-		<script src="../../../js/utils/events.js"></script>
-		<script src="../../../js/libs/jquery.js"></script>
-		<script src="../../../js/publicProtocolNew.js"></script>
-		<script src="../../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../../js/utils/vconsole.min.js"></script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/publicProtocolNew.js"></script>
+		<!--<script src="../../js/publicProtocol.js"></script>-->
+		<script type="text/javascript" src="../../js/utils/vconsole.min.js"></script>
 
-		<script src='../../../js/libs/crypto-js/require.js'></script>
-		<script src='../../../js/utils/signHmacSHA1.js'></script>
-		<script src='../../../js/utils/sortSign.js'></script>
-		<script src="../../../js/storageKeyName.js"></script>
-		<script src="../../../js/utils/store.js"></script>
+		<script src='../../js/libs/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
+		<script src='../../js/utils/sortSign.js'></script>
+		<script src="../../js/storageKeyName.js"></script>
+		<script src="../../js/utils/store.js"></script>
 		
-	<script src="../../../js/mui.zoom.js"></script>
-	<script src="../../../js/mui.previewimage.js"></script>
-	<script src="../../../js/utils/camera.js"></script>
-	<script src="../../../js/utils/files.js"></script>
-	<script src="../../../js/utils/ASFiles.js"></script>
-	<script src="../../../js/utils/recordvideoutil.js"></script>
-	<script src="../../../js/utils/load.js"></script>
-	<script src="../../../js/utils/video.js"></script>
-	<script src="../../../js/utils/gallerypick.js"></script>
-	<script src="../../../js/utils/CloudFileUtil.js"></script>
-	<script src="../../../js/utils/compress.js"></script>
-	<script src="../../../js/utils/cryption.js"></script>
-	<script src="../../../js/qiniu/qiniu.js"></script>
+	<script src="../../js/mui.zoom.js"></script>
+	<script src="../../js/mui.previewimage.js"></script>
+	<script src="../../js/utils/camera.js"></script>
+	<script src="../../js/utils/files.js"></script>
+	<script src="../../js/utils/ASFiles.js"></script>
+	<script src="../../js/utils/recordvideoutil.js"></script>
+	<script src="../../js/utils/load.js"></script>
+	<script src="../../js/utils/video.js"></script>
+	<script src="../../js/utils/gallerypick.js"></script>
+	<script src="../../js/utils/CloudFileUtil.js"></script>
+	<script src="../../js/utils/compress.js"></script>
+	<script src="../../js/utils/cryption.js"></script>
+	<script src="../../js/qiniu/qiniu.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			//获取个人信息
