--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -217,7 +217,7 @@
 					clickFunction:function(index){
 						console.log('index:',index);
 						if (index == 0) {//学校通知
-							utils.mOpenWithData("notice/noticeList.html", {index:1});
+							utils.mOpenWithData("noticeList.html", {index:1});
 						} else{
 							
 						}
