--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<style type="text/css">
 		</style>
 	</head>
@@ -77,20 +77,20 @@
 				</div>
 			</div>
 		</div>
-		<script src="../../../js/mui.min.js"></script>
-		<script src="../../../js/utils/vue.min.js"></script>
-		<script src="../../../js/utils/utils.js"></script>
-		<script src="../../../js/utils/events.js"></script>
-		<script src="../../../js/libs/jquery.js"></script>
-		<script src="../../../js/publicProtocolNew.js"></script>
-		<script src="../../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../../js/utils/vconsole.min.js"></script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
+		<script src="../../js/utils/utils.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/libs/jquery.js"></script>
+		<script src="../../js/publicProtocolNew.js"></script>
+		<!--<script src="../../js/publicProtocol.js"></script>-->
+		<script type="text/javascript" src="../../js/utils/vconsole.min.js"></script>
 
-		<script src='../../../js/libs/crypto-js/require.js'></script>
-		<script src='../../../js/utils/signHmacSHA1.js'></script>
-		<script src='../../../js/utils/sortSign.js'></script>
-		<script src="../../../js/storageKeyName.js"></script>
-		<script src="../../../js/utils/store.js"></script>
+		<script src='../../js/libs/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
+		<script src='../../js/utils/sortSign.js'></script>
+		<script src="../../js/storageKeyName.js"></script>
+		<script src="../../js/utils/store.js"></script>
 		<script type="text/javascript">
 			mui.init();
 			//获取个人信息
