--- a/HomeSchoolInteraction/html/homeSchool/addNotice1.html
+++ b/HomeSchoolInteraction/html/homeSchool/addNotice1.html
@@ -18,7 +18,7 @@
 				background: #f2f3f5;
 				/*line-height: 0px;*/
 			}
-
+			
 			#notes {
 				border: none;
 				border-radius: initial;
@@ -26,7 +26,7 @@
 				border-bottom: 1px solid lightgray;
 				margin-bottom: 0px;
 			}
-
+			
 			.mui-popover {
 				width: 100%;
 				height: 0px;
@@ -35,7 +35,7 @@
 				border: none;
 				box-shadow: none;
 			}
-
+			
 			.mui-backdrop {
 				background-color: transparent;
 			}
@@ -67,24 +67,24 @@
 					</li>
 					<li class="mui-table-view-cell">
 						<a class="mui-navigate-right" @click="clickSelect(0)">
-							年级:
+							年级:{{gradeStr}}
 						</a>
 					</li>
 					<li class="mui-table-view-cell">
 						<a class="mui-navigate-right" @click="clickSelect(1)">
-							班级:
+							班级:{{classStr}}
 						</a>
 					</li>
-					<li class="mui-table-view-cell">
+					<li class="mui-table-view-cell" v-show="flag>0">
 						<a class="mui-navigate-right" @click="clickSelect(2)">
-							家长:
+							家长:{{parentsStr}}
 						</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="position: absolute;z-index: 999;" controls="controls"  webkit-playsinline playsinline>
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls" webkit-playsinline playsinline>
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
@@ -129,11 +129,22 @@
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/libs/jquery.js"></script>
 		<script src="../../js/publicProtocolNew.js"></script>
+		<script src="../../js/utils/vconsole.min.js"></script>
+		<!--加密-->
+		<script src="../../js/libs/RSA/Barrett.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/libs/RSA/BigInt.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/libs/RSA/RSA.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/utils/RSAEncrypt.js" type="text/javascript" charset="utf-8"></script>
+
+		<script src='../../js/libs/crypto-js/require.js'></script>
+		<script src='../../js/utils/signHmacSHA1.js'></script>
+		<script src='../../js/utils/sortSign.js'></script>
 		<script type="text/javascript">
 			mui.init();
 			//获取个人信息
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			console.log('personal:' + JSON.stringify(personal));
+			var publicParameter = store.get(window.storageKeyName.PUBLICPARAMETER);
 			var pathList = []; //记录需要删掉的图片和缩略图
 			var QNUptoken; //token数据
 			var uploadNum = 0; //记录上传的次数
@@ -145,32 +156,133 @@
 			mui.plusReady(function() {
 				init(); //初始化控件
 				initListener(); //初始化监听
+				//判断是否是班主任
+
+				for(var i = 0; i < personal.clss.length; i++) {
+					var classModel = personal.clss[i];
+					if(classModel.isms == 1) {
+						addNoticeContent.flag++;
+						addNoticeContent.gradeArray.push(classModel.grdid);
+						addNoticeContent.classStr = addNoticeContent.classStr + ',' + classModel.clsname;
+						addNoticeContent.parentsStr = addNoticeContent.parentsStr + ';' + classModel.clsname + '全部家长';
+					}
+				}
+				//去重
+				addNoticeContent.gradeArray.distinct();
+				//合并选择的班级ids
+				for (var i = 0; i < addNoticeContent.gradeArray.length; i++) {
+					var clsModel = addNoticeContent.gradeArray[i];
+					addNoticeContent.classIDs = addNoticeContent.classIDs + ',' + clsModel;
+				}
+				//去掉首个，
+				if (addNoticeContent.classIDs.length>0) {
+					addNoticeContent.classIDs = addNoticeContent.classIDs.substr(1);
+					addNoticeContent.parentsStr = addNoticeContent.parentsStr.substr(1);
+				}
+				//如果是班主任
+				if(addNoticeContent.flag > 0) {
+					//获取所有年级
+					var enData0 = {};
+					//不需要加密的数据
+					var comData0 = {
+						uuid: publicParameter.uuid, //用户设备号
+						utoken: personal.utoken, //用户令牌
+						appid: publicParameter.appid, //系统所分配的应用ID
+						isfinish: 0 //是否已毕业，0未毕业,1已毕业,-1全部
+					}
+					events.showWaiting();
+					//发送网络请求，data为网络返回值
+					postDataEncry('SchGrade', enData0, comData0, 0, function(data) {
+						events.closeWaiting();
+						if(data.RspCode == 0) {
+							for(var i = 0; i < data.RspData.grds.length; i++) {
+								var model = data.RspData.grds[i];
+								for(var a = 0; a < addNoticeContent.gradeArray.length; a++) {
+									var tempGrade0 = addNoticeContent.gradeArray[a];
+									if(model.grdid == tempGrade0) {
+										addNoticeContent.gradeStr = addNoticeContent.gradeStr + ',' + model.grdname;
+									}
+								}
+							}
+							addNoticeContent.gradeStr = addNoticeContent.gradeStr.substr(1);
+							addNoticeContent.classStr = addNoticeContent.classStr.substr(1);
+							//6.学校班级学生,获取选择班级中对应的人
+							getClassParents(addNoticeContent.classIDs);
+						} else {
+							mui.toast(data.RspTxt, "cancel");
+						}
+					});
+				}
 			});
 			
+			
+
 			var addNoticeContent = new Vue({
 				el: "#addNoticeContent",
 				data: {
-					flag: 0, //0刷新，1加载更多
+					flag: 0, //0不是班主任，1是
+					gradeArray: [], //班主任身份时，执教年级列表
 					noticeArray: [], //通知列表数组
 					content: '', //内容
 					msgFlag: 1, //是否发生短信
-					gradeArray: [], //年级列表
-					classArray: [], //班级列表
+					gradeStr: '', //年级列表
+					classStr: '', //班级列表
+					parentsStr: '', //家长列表
+					classIDs:'',//选择的班级ids
 					parentArray: [] //家长列表
 				},
 				methods: {
 					clickSelect: function(flag) {
 						console.log('flag:' + flag);
-						if(flag == 0) {//年级
+						if(flag == 0) { //年级
 							utils.mOpenWithData("../../html/homeSchool/gradeList.html", {});
-						} else if(flag == 1) {//班级
-//							utils.mOpenWithData("../../html/homeSchool/notice/noticeDetail.html", {});
-						} else if(flag == 2) {//家长
-							
+						} else if(flag == 1) { //班级
+							utils.mOpenWithData("../../html/homeSchool/gradeList.html", {});
+						} else if(flag == 2) { //家长
+							utils.mOpenWithData("../../html/homeSchool/notice_parentsList.html", {classIDs:addNoticeContent.classIDs});
 						}
 					}
 				}
 			});
+
+			window.addEventListener('selectGradeClass', function(data) {
+				console.log("data" + JSON.stringify(data.detail));
+				var tempData = data.detail;
+				addNoticeContent.gradeStr = tempData.gradeShow;
+				addNoticeContent.classStr = tempData.classShow;
+				//6.学校班级学生,获取选择班级中对应的人
+				getClassParents(tempData.classIDs);
+			});
+			
+			window.addEventListener('selectStudents', function(data) {
+				console.log("data" + JSON.stringify(data.detail));
+				var tempData = data.detail;
+				addNoticeContent.parentsStr = tempData.parentsShow;
+				addNoticeContent.parentArray = tempData.parentsArray;
+			});
+			
+			//6.学校班级学生,获取选择班级中对应的人
+			var getClassParents = function(classids){
+				var enData0 = {};
+				//不需要加密的数据
+				var comData0 = {
+					uuid: publicParameter.uuid, //用户设备号
+					utoken: personal.utoken, //用户令牌
+					appid: publicParameter.appid, //系统所分配的应用ID
+					classids: classids //需要查询的班级ID,多个代码用英文逗号隔开
+				}
+				events.showWaiting();
+				//发送网络请求，data为网络返回值
+				postDataEncry('ClassStu', enData0, comData0, 0, function(data) {
+					events.closeWaiting();
+					if(data.RspCode == 0) {
+						console.log('data:' + JSON.stringify(data));
+						addNoticeContent.parentArray = data.RspData.clssstus;
+					} else {
+						mui.toast(data.RspTxt, "cancel");
+					}
+				});
+			}
 
 			/*
 			 * 初始化控件
@@ -245,15 +357,20 @@
 				document.getElementById('finish').addEventListener('tap', function() {
 					events.hideKeyBoard(hideOption);
 					if(notes.value.replace(/(^\s*)|(\s*$)/g, "") == "" && multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0 && multiMedia.data.AudioArray.length == 0) { //为空不允许发送
-						mui.toast('笔记不能为空');
+						mui.toast('通知不能为空');
 					} else if(notes.value.length > 2000) {
-						mui.toast('笔记最多2000字');
-					} else {
+						mui.toast('通知最多2000字');
+					} else if(addNoticeContent.parentArray.length == 0) {
+						mui.toast('请选择接收人');
+					}else {
 						var wd = events.showWaiting();
 						document.getElementById("finish").disabled = true;
+						console.log('000');
 						if(multiMedia.data.PictureArray.length == 0 && multiMedia.data.VideoArray.length == 0 && multiMedia.data.AudioArray.length == 0) { //没有传附件
+							console.log('001');
 							addNote(wd, '3', '', '', 0);
 						} else {
+							console.log('002');
 							uploadFile(wd); //上传文件
 						}
 					}
@@ -268,48 +385,87 @@
 			 * @param {Object} encImg 附件缩略图地址
 			 */
 			function addNote(wd, encType, encAddr, encImg, encLen) {
-				encLen = Math.ceil(encLen) || 0;
-				//38.（用户空间）新增某用户空间信息 （云笔记）
-				//所需参数
-				var comData = {
-					userId: store.get(window.storageKeyName.PERSONALINFO).utid, //用户ID
-					msgContent: notes.value, //记事内容
-					encType: encType, //附件类型，1图片2视频3仅文字4音频
-					encAddr: encAddr, //附件地址
-					encImg: encImg, //附件缩略图地址0
-					encIntro: '', //附件简介
-					noteType: '1', //信息类型,1云笔记2个人空间
-					userIds: '[]', //推送用户ID
-					pubScopes: '[1]', //1 家校圈 必选,2 展现 可选例如[1,2]
-					pubArea: '', //具体到市级代码
-					encLen: encLen, //音视频时长
-					msgTitle: '' //记事标题
-				};
-				postDataPro_addUserSpace(comData, wd, function(data) {
-					//console.log('38postDataPro_addUserSpace（用户空间）新增某用户空间信息 （云笔记）.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-					if(data.RspCode == 0) {
-						var time = 0;
-						if(encType != '3') {
-							time = 2000;
+				var temp0 = [];
+				var temp1 = [];
+				var temp2 = [];
+				var temp3 = [];
+				for (var i = 0; i < addNoticeContent.parentArray.length.length; i++) {
+					var stuModel = addNoticeContent.parentArray[i];
+					temp0.push(stuModel.stuid);
+					temp1.push(stuModel.stuname);
+					temp2.push(stuModel.stuno);
+					temp3.push(stuModel.stuid);
+				}
+				//1.新增学校通知（同时增加通知未读）
+						var tempData1 = {
+							schoolId: personal.schid, //学校ID，统一部署的时候，学校ID传000000
+							noticeContent: notes.value, //内容
+							noticEncName: '', //附件名称，竖杠隔开
+							noticeEncAddr: encAddr, //附件地址，竖杠隔开
+							smsSync: 0, //是否短信同步，先填0
+							sendManId: personal.utid, //发布人ID
+							sendManCode: personal.uid, //发布人账号
+							sendManName: personal.utname, //发布人姓名
+							sendManImg: personal.imgurl, //发布人头像
+							receiveManIds: arrayToStr(temp0), //接收人人ID，例如：[“1”,”2”,”3”]
+							receiveManCodes: arrayToStr(temp2), //接收人账号，例如：[“1”,”2”,”3”]
+							receiveManNames: arrayToStr(temp1), //接收人姓名，例如：[“1”,”2”,”3”]
+							receiveManImgs: arrayToStr(temp0) //接收人头像
 						}
-						setTimeout(function() {
-							mui.toast('发布成功');
-							pathList = [];
-							events.fireToPageNone('app_notes_main.html', 'refreshView');
-							wd.close();
-							mui.back();
-						}, 2000);
-
-					} else {
-						document.getElementById("finish").disabled = false;
-						if(pathList.length != 0) {
-							BatchDelete(pathList, wd);
-						} else {
-							wd.close();
-						}
-						mui.toast(data.RspTxt);
-					}
-				});
+						events.showWaiting();
+						//1.新增学校通知（同时增加通知未读）
+						addNoticePro(tempData1, function function_name(data) {
+							events.closeWaiting();
+							if(data.RspCode == 0) {
+								addNoticeContent.content = '';
+								mui.toast('成功');
+							} else {
+								mui.toast(data.RspTxt);
+							}
+						});
+				
+//				encLen = Math.ceil(encLen) || 0;
+//				//38.（用户空间）新增某用户空间信息 （云笔记）
+//				//所需参数
+//				var comData = {
+//					userId: store.get(window.storageKeyName.PERSONALINFO).utid, //用户ID
+//					msgContent: notes.value, //记事内容
+//					encType: encType, //附件类型，1图片2视频3仅文字4音频
+//					encAddr: encAddr, //附件地址
+//					encImg: encImg, //附件缩略图地址0
+//					encIntro: '', //附件简介
+//					noteType: '1', //信息类型,1云笔记2个人空间
+//					userIds: '[]', //推送用户ID
+//					pubScopes: '[1]', //1 家校圈 必选,2 展现 可选例如[1,2]
+//					pubArea: '', //具体到市级代码
+//					encLen: encLen, //音视频时长
+//					msgTitle: '' //记事标题
+//				};
+//				postDataPro_addUserSpace(comData, wd, function(data) {
+//					//console.log('38postDataPro_addUserSpace（用户空间）新增某用户空间信息 （云笔记）.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+//					if(data.RspCode == 0) {
+//						var time = 0;
+//						if(encType != '3') {
+//							time = 2000;
+//						}
+//						setTimeout(function() {
+//							mui.toast('发布成功');
+//							pathList = [];
+//							events.fireToPageNone('app_notes_main.html', 'refreshView');
+//							wd.close();
+//							mui.back();
+//						}, 2000);
+//
+//					} else {
+//						document.getElementById("finish").disabled = false;
+//						if(pathList.length != 0) {
+//							BatchDelete(pathList, wd);
+//						} else {
+//							wd.close();
+//						}
+//						mui.toast(data.RspTxt);
+//					}
+//				});
 			}
 
 			/**
@@ -569,6 +725,23 @@
 					}
 				}
 			}
+			//数组去重
+			Array.prototype.distinct = function() {
+				var arr = this,
+					i,
+					j,
+					len = arr.length;
+				for(i = 0; i < len; i++) {
+					for(j = i + 1; j < len; j++) {
+						if(arr[i] == arr[j]) {
+							arr.splice(j, 1);
+							len--;
+							j--;
+						}
+					}
+				}
+				return arr;
+			};
 		</script>
 	</body>
 
