新建通知修改

--- a/HomeSchoolInteraction/html/homeSchool/noticeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeList.html
@@ -133,7 +133,8 @@
 				methods: {
 					revoke:function(){
 						console.log('add通知');
-						utils.mOpenWithData("../../html/homeSchool/addNotice1.html", {});
+//						utils.mOpenWithData("../../html/homeSchool/addNotice1.html", {});
+						utils.mOpenWithData("../../html/homeSchool/test.html", {});
 					}
 				}
 			});
