--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -23,7 +23,7 @@
 				<span class="mui-tab-label">家校互动</span>
 			</a>
 			<!--<a class="mui-tab-item" href="html/ScienceEducation/sciedu_home.html">-->
-			<a class="mui-tab-item" href="html/homeSchool/homeSchoolIndex.html">
+			<a class="mui-tab-item" href="html/Course/courseIndex.html">
 				<span class="mui-icon iconfont icon-jiaoyu"></span>
 				<span class="mui-tab-label">科教活动</span>
 			</a>
@@ -31,7 +31,7 @@
 				<span class="mui-icon iconfont icon-kecheng"></span>
 				<span class="mui-tab-label">课程</span>
 			</a>
-			<a class="mui-tab-item" href="html/homeSchool/homeSchoolIndex.html">
+			<a class="mui-tab-item" href="html/Course/courseIndex.html">
 				<span class="mui-icon iconfont icon-iconfontbangzhu"></span>
 				<span class="mui-tab-label">助学</span>
 			</a>
@@ -41,7 +41,7 @@
 			//mui初始化
 			mui.init();
 //			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/ScienceEducation/sciedu_home.html', 'html/Course/courseIndex.html', 'html/homeSchool/homeSchoolIndex.html'];
-			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/homeSchool/homeSchoolIndex.html', 'html/Course/courseIndex.html', 'html/homeSchool/homeSchoolIndex.html'];
+			var subpages = ['html/homeSchool/homeSchoolIndex.html', 'html/Course/courseIndex.html', 'html/Course/courseIndex.html', 'html/Course/courseIndex.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
