--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -179,12 +179,14 @@
 			console.log('tempStr:' + tempStr);
 			//判断上次是否登录过，自动登录
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
-			document.getElementById("account").value = personal.uid;
-			document.getElementById("password").value = '111111';
+			
 			//			console.log('personal:' + JSON.parse(personal));
-			if(personal.utid == 'undefined' || personal.utid == null) {
+			if (personal) {
+				if(personal.utid == 'undefined' || personal.utid == null) {
 
 			} else {
+				document.getElementById("account").value = personal.uid;
+			document.getElementById("password").value = '111111';
 				//需要参数
 				var comData = {
 					uuid: tempModel.uuid,
@@ -208,6 +210,8 @@
 					}
 				});
 			}
+			}
+			
 		}
 
 		//判断是否输入了值
